--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bitcoinjs-lib": "^3.0.3",
     "blockchain-api": "^1.3.2",
     "blockchain.info": "^2.6.0",
+    "blockr-unofficial": "^1.2.5",
     "randombytes": "^2.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
